// $Id$
// $Name$

Image Picker  for D6 in DRUPAL-6--2, 2009-06-16
------------------------------------
by hutch, #358644 fixed
bug in stats display fixed

Image Picker  for D6 in DRUPAL-6--2, 2009-05-30
------------------------------------
by hutch updated translations

Image Picker  for D6 in DRUPAL-6--2, 2009-05-19
------------------------------------
by hutch fixed a bug in imagepicker_form_alter

Image Picker  for D6 in DRUPAL-6--2, 2009-05-13
------------------------------------
by hutch added support for the wysiwyg module
fixed a bug in imagepicker_form_alter
fixed a bug in block_settings

Image Picker  for D6 in DRUPAL-6--2, 2009-04-20
------------------------------------
by hutch Added quotas

Image Picker  for D6 in DRUPAL-6--2, 2009-04-17
------------------------------------
by hutch, added roles and fixed support
for module fckeditor-6.x-1.3

Image Picker  for D6 in DRUPAL-6--2, 2009-03-07
------------------------------------
by hutch, branch to imagepicker 2

Image Picker  for D6 in HEAD, 2008-11-11
------------------------------------
by hutch, added some help to readme.txt

Image Picker  for D6 in HEAD, 2008-10-25
------------------------------------
by hutch, #321162 cleaned up css
added the ability to use imagepicker.tpl.php
if found in the default theme directory

Image Picker for D6 in HEAD, 2008-09-23
------------------------------------
by hutch, fixed path in menu to edit in iframe

Image Picker for D6 in HEAD, 2008-09-07
------------------------------------
by hutch, added order select box to browser

Image Picker  for D6 in HEAD, 2008-09-04
------------------------------------
by hutch, added Use full url feature

Image Picker  for D6 in HEAD, 2008-09-02
------------------------------------
by hutch, #302210 patch supplied by Joshua Hesketh
improved admin settings and improved the javascript
insertion method

Image Picker  for D6 in HEAD, 2008-07-11
------------------------------------
by hutch, #281241 fixed excessive messages on install.
