@@ -1,6 +1,10 @@
 // $Id$
 // $Name$
 
+Image Picker  for D6 in DRUPAL-6--2, 2009-06-28
+------------------------------------
+by hutch, added display description option
+
 Image Picker  for D6 in DRUPAL-6--2, 2009-06-16
 ------------------------------------
 by hutch, #358644 fixed
